--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "space-tourism",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.11.10",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "next": "13.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.3"
-  }
+	"name": "space-tourism",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "concurrently \"next dev\" \"tailwindcss --input ./app/globals.css --output ./app/output.css --watch\"",
+		"build": "tailwindcss ./app/globals.css --output ./app/output.css && next build",
+		"start": "next start --turbo",
+		"lint": "next lint --turbo"
+	},
+	"dependencies": {
+		"@next/font": "^13.0.6",
+		"@types/node": "18.11.10",
+		"@types/react": "18.0.25",
+		"@types/react-dom": "18.0.9",
+		"eslint": "8.28.0",
+		"eslint-config-next": "13.0.5",
+		"next": "13.0.5",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"typescript": "4.9.3"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.13",
+		"concurrently": "^7.6.0",
+		"postcss": "^8.4.19",
+		"tailwindcss": "^3.2.4"
+	}
 }
